--- a/一维卷积原理及应用.md
+++ b/一维卷积原理及应用.md
@@ -2,6 +2,9 @@
 在计算机视觉(Computer Vision)中，二维卷积(2D CNNs)是非常重要的。常用的图像分类、目标检测、图像分割模型都用到了二维卷积。一维卷积相对小众一点，但是在某些问题上也具有重要的作用。本文梳理了一下一维卷积的原理和应用，并提供keras、pytorch代码，供大家参考。
 
 # 二维、一维和三维卷积的原理
+## 二维卷积
+![](http://ww1.sinaimg.cn/large/e323d644ly1g0btj8s7grj20ab04wmxv.jpg)
+- 输入数据的维度是 (h,w,c)，卷积核维度为 (n,n,c,num_filter)，strie = s, padding = p，那么输出数据的维度为($\frac{h + 2p - f}{s} + 1 $, $\frac{h + 2p - f}{s} + 1 $, num_filter)
 
 # 一维卷积在CV问题中的应用
 
