--- a/一维卷积原理及应用.md
+++ b/一维卷积原理及应用.md
@@ -1,12 +1,25 @@
-![](http://ww1.sinaimg.cn/large/e323d644ly1g0bsth7hjhj20rv09yjuy.jpg)
+<div align=center>![](http://ww1.sinaimg.cn/large/e323d644ly1g0bsth7hjhj20rv09yjuy.jpg)</div>
 在计算机视觉(Computer Vision)中，二维卷积(2D CNNs)是非常重要的。常用的图像分类、目标检测、图像分割模型都用到了二维卷积。一维卷积相对小众一点，但是在某些问题上也具有重要的作用。本文梳理了一下一维卷积的原理和应用，并提供keras、pytorch代码，供大家参考。
 
 # NiN、一维、二维、三维卷积的原理
-不同维度的卷积，本质的计算方法是一样的，区别在于输入、输出数据的维度。
+不同维度的卷积，本质的计算方法是一样的，区别在于输入数据和卷积核(filter)的维度不一样，当然输出数据的维度也相应改变。
 ## NiN（1x1卷积核）
+<div align=center>![](http://ww1.sinaimg.cn/large/e323d644ly1g0by0z9e8tj20ji058q3t.jpg)</div>
+<div align=center>![](http://ww1.sinaimg.cn/large/e323d644ly1g0by2lpiwnj213t0btn0z.jpg)</div>
 - **首先区分两个概念：一维卷积和1X1卷积核对应的卷积(NiN)**，前者的卷积核是一维的向量，后者的卷积核是一个标量，因此后者其实可以称作零维卷积（文献中好像没这么说的）。
-- 1x1卷积核
+- 1x1卷积核的作用
+	- 降维/升维
+	- 增加非线性
+	- 跨通道信息交互
+- 1x1卷积核的应用
+	- ResNet
+	<div align=center>![](http://ww1.sinaimg.cn/large/e323d644ly1g0by7osupaj20nr08wwgx.jpg)</div>
 
+	- GoogLeNet
+   <div align=center> ![](http://ww1.sinaimg.cn/large/e323d644ly1g0byii6c26j20hc08ajrt.jpg)</div>
+    <center>简单的inception模块</center>
+    <div align=center>![](http://ww1.sinaimg.cn/large/e323d644ly1g0byhuu31yj20gv08sgm7.jpg)</div>
+    <center>带有维度约减的inception模块</center>
 ## 一维卷积
 
 ```python
@@ -23,7 +36,7 @@ print(output)
 ```
 
 ## 二维卷积
-![](http://ww1.sinaimg.cn/large/e323d644ly1g0btj8s7grj20ab04wmxv.jpg)
+<div align=center>![](http://ww1.sinaimg.cn/large/e323d644ly1g0btj8s7grj20ab04wmxv.jpg)</div>
 
 二维卷积是最常用的卷积方法，它的输入输出分别是：
 - 输入数据（图片）的维度是 (h,w,c)，卷积核维度为 (n,n,c)，num_filter代表卷积核个数，strie = s, padding = p，那么输出数据的维度为($\frac{h + 2p - f}{s} + 1 $, $\frac{h + 2p - f}{s} + 1 $, num_filter)
@@ -33,18 +46,21 @@ print(output)
 $$ h' = \frac{7+2*0-3}{1} + 1 = 5$$
 $$ w' = \frac{7+2*0-3}{1} + 1 = 5$$
 
-![](http://ww1.sinaimg.cn/large/e323d644ly1g0bx7f19zuj20de06b0sl.jpg)
+<div align=center>![](http://ww1.sinaimg.cn/large/e323d644ly1g0bx7f19zuj20de06b0sl.jpg)</div>
 
 - 例子二：上例中，仅仅把stride由1修改为2。则输出图片的高和宽为
 $$ h' = \frac{7+2*0-3}{2} + 1 = 3$$
 $$ w' = \frac{7+2*0-3}{2} + 1 = 3$$
 
-![](http://ww1.sinaimg.cn/large/e323d644ly1g0bx807mogj20cw06j3yd.jpg)
+<div align=center>![](http://ww1.sinaimg.cn/large/e323d644ly1g0bx807mogj20cw06j3yd.jpg)</div>
 
 # 一维卷积在时间序列数据分析中的应用
 
 # 如何使用一维卷积（keras、pytorch代码）
 学习的最终目的是为了应用，如果你有一个时间序列数据要处理，比如机械领域的故障诊断或状态预测等。下面分别给出keras和pytorch的代码。
 
-# 相关资料
+# 参考资料
+- DeepLearning.ai视频教程 (https://www.coursera.org/lecture/convolutional-neural-networks/networks-in-networks-and-1x1-convolutions-ZTb8x)
+- Going Deeper with Convolutions（https://arxiv.org/pdf/1409.4842.pdf）
+- 
 
