--- a/一维卷积原理及应用.md
+++ b/一维卷积原理及应用.md
@@ -6,7 +6,7 @@
 ## NiN（1x1卷积核）
 ![](http://ww1.sinaimg.cn/large/e323d644ly1g0by0z9e8tj20ji058q3t.jpg)
 ![](http://ww1.sinaimg.cn/large/e323d644ly1g0by2lpiwnj213t0btn0z.jpg)
-- **首先区分两个概念：一维卷积和1X1卷积核对应的卷积(NiN)**，前者的卷积核是一维的向量，后者的卷积核是一个标量，因此后者其实可以称作零维卷积（文献中好像没这么说的）。
+- **首先区分两个概念：一维卷积和1x1卷积核对应的卷积(NiN)**，前者的卷积核是一维的向量，后者的卷积核是一个标量，因此后者其实可以称作零维卷积（文献中好像没这么说的）。
 - 1x1卷积核的作用
 	- 降维/升维
 	- 增加非线性
@@ -15,10 +15,9 @@
 	- ResNet
 	![](http://ww1.sinaimg.cn/large/e323d644ly1g0by7osupaj20nr08wwgx.jpg)
 
-	- GoogLeNet
-    ![](http://ww1.sinaimg.cn/large/e323d644ly1g0byii6c26j20hc08ajrt.jpg)
-    <center>简单的inception模块</center>
+	- GoogLeNet    
     ![](http://ww1.sinaimg.cn/large/e323d644ly1g0byhuu31yj20gv08sgm7.jpg)
+    
     <center>带有维度约减的inception模块</center>
 ## 一维卷积
 
@@ -53,6 +52,8 @@ $$ h' = \frac{7+2*0-3}{2} + 1 = 3$$
 $$ w' = \frac{7+2*0-3}{2} + 1 = 3$$
 
 ![](http://ww1.sinaimg.cn/large/e323d644ly1g0bx807mogj20cw06j3yd.jpg)
+
+## 三维卷积
 
 # 一维卷积在时间序列数据分析中的应用
 
