--- a/一维卷积原理及应用.md
+++ b/一维卷积原理及应用.md
@@ -6,7 +6,7 @@
 ## NiN（1x1卷积核）
 ![](http://ww1.sinaimg.cn/large/e323d644ly1g0by0z9e8tj20ji058q3t.jpg)
 ![](http://ww1.sinaimg.cn/large/e323d644ly1g0by2lpiwnj213t0btn0z.jpg)
-- **首先区分两个概念：一维卷积和1x1卷积核对应的卷积(NiN)**，前者的卷积核是一维的向量，后者的卷积核是一个标量，因此后者其实可以称作零维卷积（文献中好像没这么说的）。
+- **首先区分两个概念：一维卷积和1x1卷积核对应的卷积(NiN)**，前者的卷积核是一维的向量，后者的卷积核是一个标量，因此后者其实可以称作“零维卷积”（文献中好像没这么说的）。
 - 1x1卷积核的作用
 	- 降维/升维
 	- 增加非线性
@@ -15,13 +15,15 @@
 	- ResNet
 	![](http://ww1.sinaimg.cn/large/e323d644ly1g0by7osupaj20nr08wwgx.jpg)
 
-	- GoogLeNet    
+	- GoogLeNet
+    
     ![](http://ww1.sinaimg.cn/large/e323d644ly1g0byhuu31yj20gv08sgm7.jpg)
     
     <center>带有维度约减的inception模块</center>
 ## 一维卷积
 
 ```python
+import numpy as np
 input = np.array([1, 0, 1, 0, 1, 0, 1, 0, 1, 0])
 kernel = np.array([1, -1, 0])
 output = np.array([0, 0, 0, 0, 0, 0, 0, 0, 0, 0])
@@ -32,16 +34,17 @@ for ii in range(8):
 
 # Print output array
 print(output)
+#输出[1 -1 1 -1 1 -1 0 0]
 ```
 
 ## 二维卷积
 ![](http://ww1.sinaimg.cn/large/e323d644ly1g0btj8s7grj20ab04wmxv.jpg)
 
 二维卷积是最常用的卷积方法，它的输入输出分别是：
-- 输入数据（图片）的维度是 (h,w,c)，卷积核维度为 (n,n,c)，num_filter代表卷积核个数，strie = s, padding = p，那么输出数据的维度为($\frac{h + 2p - f}{s} + 1 $, $\frac{h + 2p - f}{s} + 1 $, num_filter)
+- 输入数据（图片）的维度是 [h,w,c]，卷积核维度为 [n,n,c]，num_filter代表卷积核个数，strie = s, padding = p，那么输出数据的维度为[$\frac{h + 2p - f}{s} + 1 $, $\frac{h + 2p - f}{s} + 1 $, num_filter]
 	- 卷积核的通道数等于输入图片的通道数
 	- 卷积核的个数等于输出图片的通道数
-- 例子一：如下图，输入数据维度为(7,7,1)，卷积核维度为(3,3,1)，1个卷积核, stride = 1, padding = 0, 则输出图片的高和宽为
+- 例子一：如下图，输入数据维度为[7,7,1]，卷积核维度为[3,3,1]，1个卷积核, stride = 1, padding = 0, 则输出图片的高和宽为
 $$ h' = \frac{7+2*0-3}{1} + 1 = 5$$
 $$ w' = \frac{7+2*0-3}{1} + 1 = 5$$
 
@@ -52,8 +55,12 @@ $$ h' = \frac{7+2*0-3}{2} + 1 = 3$$
 $$ w' = \frac{7+2*0-3}{2} + 1 = 3$$
 
 ![](http://ww1.sinaimg.cn/large/e323d644ly1g0bx807mogj20cw06j3yd.jpg)
-
 ## 三维卷积
+- **谈到三维卷积，需要明确一点：多通道的二维卷积核[h,w,c]并不是三维卷积**。n维卷积指的是卷积运算用的是n维的卷积核，而在讨论核的维度时，是不把channel维加进去的。因为卷积核的维度指的是进行滑动窗口的维度，而滑窗操作是不在channel维度上进行的。每个channel共享一个滑窗位置，且不同channel上的卷积核权重是独立的。**三维卷积核是[d,h,w,c]。**
+- 三维卷积的输出计算方法同二维卷积，只是多了一个维度
+- 三维卷积通常用于
+	- 医学影像数据，如CT影像
+	- 视频处理领域，检测动作及人物行为
 
 # 一维卷积在时间序列数据分析中的应用
 
