--- a/一维卷积原理及应用.md
+++ b/一维卷积原理及应用.md
@@ -21,6 +21,7 @@
     
     <center>带有维度约减的inception模块</center>
 ## 一维卷积
+- 一维卷积的卷积核是一个长度为n的一维向量。下面给出一个简单的一维卷积的python代码。
 
 ```python
 import numpy as np
