--- a/一维卷积原理及应用.md
+++ b/一维卷积原理及应用.md
@@ -68,6 +68,31 @@ $$ w' = \frac{7+2*0-3}{2} + 1 = 3$$
 # 如何使用一维卷积（keras、pytorch代码）
 学习的最终目的是为了应用，如果你有一个时间序列数据要处理，比如机械领域的故障诊断或状态预测等。下面分别给出keras和pytorch的代码。
 
+keras版本
+
+```python
+from keras.models import Sequential
+from keras.layers import Dense, Dropout
+from keras.layers import Embedding
+from keras.layers import Conv1D, GlobalAveragePooling1D, MaxPooling1D
+
+model = Sequential()
+model.add(Conv1D(64, 3, activation='relu', input_shape=(seq_length, 100)))
+model.add(Conv1D(64, 3, activation='relu'))
+model.add(MaxPooling1D(3))
+model.add(Conv1D(128, 3, activation='relu'))
+model.add(Conv1D(128, 3, activation='relu'))
+model.add(GlobalAveragePooling1D())
+model.add(Dropout(0.5))
+model.add(Dense(1, activation='sigmoid'))
+
+model.compile(loss='binary_crossentropy',
+              optimizer='rmsprop',
+              metrics=['accuracy'])
+
+model.fit(x_train, y_train, batch_size=16, epochs=10)
+score = model.evaluate(x_test, y_test, batch_size=16)
+```
 # 参考资料
 - DeepLearning.ai视频教程 (https://www.coursera.org/lecture/convolutional-neural-networks/networks-in-networks-and-1x1-convolutions-ZTb8x)
 - Going Deeper with Convolutions（https://arxiv.org/pdf/1409.4842.pdf）
