--- a/一维卷积原理及应用.md
+++ b/一维卷积原理及应用.md
@@ -1,42 +1,9 @@
 ![](http://ww1.sinaimg.cn/large/e323d644ly1g0bsth7hjhj20rv09yjuy.jpg)
-在计算机视觉(Computer Vision)中，二维卷积(2D CNNs)是非常重要的。常用的图像分类、目标检测、图像分割模型都用到了二维卷积。一维卷积相对小众一点，但是在某些问题上也具有重要的作用。本文梳理了一下一维卷积的原理和应用，并提供keras、pytorch代码，供大家参考。
+卷积神经网络通常用在计算机视觉(Computer Vision)领域，其中又以二维卷积(2D CNNs)为主。常用的图像分类、目标检测、图像分割模型都用到了二维卷积。一维卷积相对小众一点，但是在某些问题上也具有重要的作用。本文梳理了一下一维卷积的原理和应用，并提供简单的demo代码，供大家参考。
 
 # NiN、一维、二维、三维卷积的原理
-不同维度的卷积，本质的计算方法是一样的，区别在于输入数据和卷积核(filter)的维度不一样，当然输出数据的维度也相应改变。
-## NiN（1x1卷积核）
-![](http://ww1.sinaimg.cn/large/e323d644ly1g0by0z9e8tj20ji058q3t.jpg)
-![](http://ww1.sinaimg.cn/large/e323d644ly1g0by2lpiwnj213t0btn0z.jpg)
-- **首先区分两个概念：一维卷积和1x1卷积核对应的卷积(NiN)**，前者的卷积核是一维的向量，后者的卷积核是一个标量，因此后者其实可以称作“零维卷积”（文献中好像没这么说的）。
-- 1x1卷积核的作用
-	- 降维/升维
-	- 增加非线性
-	- 跨通道信息交互
-- 1x1卷积核的应用
-	- ResNet
-	![](http://ww1.sinaimg.cn/large/e323d644ly1g0by7osupaj20nr08wwgx.jpg)
 
-	- GoogLeNet
-    
-    ![](http://ww1.sinaimg.cn/large/e323d644ly1g0byhuu31yj20gv08sgm7.jpg)
-    
-    <center>带有维度约减的inception模块</center>
-## 一维卷积
-- 一维卷积的卷积核是一个长度为n的一维向量。下面给出一个简单的一维卷积的python代码。
-
-```python
-import numpy as np
-input = np.array([1, 0, 1, 0, 1, 0, 1, 0, 1, 0])
-kernel = np.array([1, -1, 0])
-output = np.array([0, 0, 0, 0, 0, 0, 0, 0, 0, 0])
-
-# Output array
-for ii in range(8):
-    output[ii] = (kernel * input[ii:ii+3]).sum()
-
-# Print output array
-print(output)
-#输出[1 -1 1 -1 1 -1 0 0]
-```
+不同维度的卷积，本质的计算方法是一样的，区别在于输入数据和卷积核(filter)的维度不一样，当然输出数据的维度也相应改变。实际上如果维度符合所要解决的问题，可以考虑任何维度的卷积，例如1D用于音频，2D用于图像，3D用于电影，本篇文章将从二维卷积作为切入，介绍1x1卷积、一维、三维卷积的原理和应用。
 
 ## 二维卷积
 ![](http://ww1.sinaimg.cn/large/e323d644ly1g0btj8s7grj20ab04wmxv.jpg)
@@ -56,6 +23,52 @@ $$ h' = \frac{7+2*0-3}{2} + 1 = 3$$
 $$ w' = \frac{7+2*0-3}{2} + 1 = 3$$
 
 ![](http://ww1.sinaimg.cn/large/e323d644ly1g0bx807mogj20cw06j3yd.jpg)
+
+## NiN（1x1卷积核）
+![](http://ww1.sinaimg.cn/large/e323d644ly1g0by0z9e8tj20ji058q3t.jpg)
+![](http://ww1.sinaimg.cn/large/e323d644ly1g0by2lpiwnj213t0btn0z.jpg)
+
+首先区分两个概念：一维卷积和1x1卷积核对应的卷积(NiN)，前者的卷积核是一维的向量，后者的卷积核是一个标量，因此后者其实可以称作“零维卷积”（文献中好像没这么说的）。
+
+1x1卷积核的作用
+- 降维/升维
+- 增加非线性
+- 跨通道信息交互
+
+1x1卷积核的应用：
+
+ResNet	
+    ![](http://ww1.sinaimg.cn/large/e323d644ly1g0by7osupaj20nr08wwgx.jpg)
+
+GoogLeNet
+    ![](http://ww1.sinaimg.cn/large/e323d644ly1g0byhuu31yj20gv08sgm7.jpg)
+
+## 一维卷积
+
+![](https://wx2.sinaimg.cn/large/005DAlR7ly1g0j3wv9uvuj30gg06smxq.jpg)
+
+一维卷积（又称时域卷积），卷积核是一个长度为n的向量，用于对一维输入信号进行邻域滤波，提取局部特征。
+- 输入数据的维度为8，卷积核的维度为5。与二维卷积类似，卷积后输出的数据维度为8−5+1=4
+- 如果卷积核数仍为1，输入数据的通道数变为16，即输入数据维度为8×16。这里的通道相当于自然语言处理中的embedding，可认为输入数据代表8个单词，其中每个单词的词向量维度大小为16。在这种情况下，过滤器的维度由5变为5×16，最终输出的数据维度仍为4。
+- 如果卷积核数为n，那么输出数据维度就变为4×n。
+- 简单的示例代码如下：
+
+```python
+import numpy as np
+input = np.array([1, 0, 1, 0, 1, 0, 1, 0, 1, 0])
+kernel = np.array([1, -1, 0])
+output = np.array([0, 0, 0, 0, 0, 0, 0, 0, 0, 0])
+
+# Output array
+for ii in range(8):
+    output[ii] = (kernel * input[ii:ii+3]).sum()
+
+# Print output array
+print(output)
+#输出[1 -1 1 -1 1 -1 0 0]
+```
+
+
 ## 三维卷积
 - **谈到三维卷积，需要明确一点：多通道的二维卷积核[h,w,c]并不是三维卷积**。n维卷积指的是卷积运算用的是n维的卷积核，而在讨论核的维度时，是不把channel维加进去的。因为卷积核的维度指的是进行滑动窗口的维度，而滑窗操作是不在channel维度上进行的。每个channel共享一个滑窗位置，且不同channel上的卷积核权重是独立的。**三维卷积核是[d,h,w,c]。**
 - 三维卷积的输出计算方法同二维卷积，只是多了一个维度
@@ -64,17 +77,21 @@ $$ w' = \frac{7+2*0-3}{2} + 1 = 3$$
 	- 视频处理领域，检测动作及人物行为
 
 # 一维卷积在时间序列数据分析中的应用
+一维卷积的最重要的应用之一是TCN(Temporal Convolutional Network)，它是一种新的可以用来解决时间序列预测的算法。关于TCN的细节，可以参考18年的这篇[论文](https://arxiv.org/pdf/1803.01271.pdf)，它通常被认为是TCN的开端。
 
-# 如何使用一维卷积（keras、pytorch代码）
-学习的最终目的是为了应用，如果你有一个时间序列数据要处理，比如机械领域的故障诊断或状态预测等。下面分别给出keras和pytorch的代码。
-
-keras版本
+如果你有一个时间序列数据要处理，比如机械领域的故障诊断或状态预测等。如何应用一维卷积来预测呢？下面给出keras的代码。
 
 ```python
 from keras.models import Sequential
 from keras.layers import Dense, Dropout
-from keras.layers import Embedding
 from keras.layers import Conv1D, GlobalAveragePooling1D, MaxPooling1D
+
+'''
+数据预处理，得到X_train, y_train, X_test, y_test。
+X_train是输入数据，shape为(batch，seq_length，100)，
+y_train是需要预测的数据，shape为(batch，1)。
+'''
+seq_length = 64
 
 model = Sequential()
 model.add(Conv1D(64, 3, activation='relu', input_shape=(seq_length, 100)))
@@ -83,18 +100,28 @@ model.add(MaxPooling1D(3))
 model.add(Conv1D(128, 3, activation='relu'))
 model.add(Conv1D(128, 3, activation='relu'))
 model.add(GlobalAveragePooling1D())
-model.add(Dropout(0.5))
-model.add(Dense(1, activation='sigmoid'))
+model.add(Dropout(0.4))
+model.add(Dense(1, activation='linear'))
 
-model.compile(loss='binary_crossentropy',
-              optimizer='rmsprop',
+model.compile(loss='mse',
+              optimizer='adam',
               metrics=['accuracy'])
 
-model.fit(x_train, y_train, batch_size=16, epochs=10)
-score = model.evaluate(x_test, y_test, batch_size=16)
+model.fit(X_train, y_train, batch_size=16, epochs=10)
+score = model.evaluate(X_test, y_test, batch_size=16)
 ```
+
+上述代码中，对于每一个一维卷积层，
+- Conv1D(filters, kernel_size, strides=1, padding='valid', data_format='channels_last', dilation_rate=1, activation=None)，第一个参数filters代表卷积核的个数，第二个参数kernel_size代表一维卷积核的长度。
+- 输入是一个3D的tensor，shape为(batch, steps, channels)。
+- 输出也是一个3D的tensor，shape为(batch, new_steps, filters)，steps的值根据padding和strides的值而变化。
+
+模型每一层的结构为
+
+![](http://ww1.sinaimg.cn/large/e323d644ly1g0j4c3eakrj20jl0fwta1.jpg)
 # 参考资料
 - DeepLearning.ai视频教程 (https://www.coursera.org/lecture/convolutional-neural-networks/networks-in-networks-and-1x1-convolutions-ZTb8x)
-- Going Deeper with Convolutions（https://arxiv.org/pdf/1409.4842.pdf）
-- 
+- Going Deeper with Convolutions (https://arxiv.org/pdf/1409.4842.pdf)
+- An Empirical Evaluation of Generic Convolutional and Recurrent Networks
+for Sequence Modeling (https://arxiv.org/pdf/1803.01271.pdf)
 
