--- a/一维卷积原理及应用 - 副本.md
+++ b/一维卷积原理及应用 - 副本.md
@@ -3,18 +3,24 @@
 
 # NiN、一维、二维、三维卷积的原理
 
-不同维度的卷积，本质的计算方法是一样的，区别在于输入数据和卷积核(filter)的维度不一样，当然输出数据的维度也相应改变。实际上如果维度符合所要解决的问题，可以考虑任何维度的卷积，例如1D用于音频，2D用于图像，3D用于医疗影像。本篇文章将从二维卷积作为切入，介绍1x1卷积、一维、三维卷积的原理和应用。
+不同维度的卷积，本质的计算方法是一样的，区别在于输入数据和卷积核(filter)的维度不一样，当然输出数据的维度也相应改变。实际上如果维度符合所要解决的问题，可以考虑任何维度的卷积，例如1D用于音频，2D用于图像，3D用于电影，本篇文章将从二维卷积作为切入，介绍1x1卷积、一维、三维卷积的原理和应用。
 
 ## 二维卷积
 ![](http://ww1.sinaimg.cn/large/e323d644ly1g0btj8s7grj20ab04wmxv.jpg)
 
 二维卷积是最常用的卷积方法，它的输入输出分别是：
-- 输入数据（图片）的维度是 [h,w,c]，卷积核维度为 [n,n,c]，num_filter代表卷积核个数，strie = s, padding = p，那么输出数据的维度为[(h+2p-f)/s + 1, (w+2p-f)/s + 1, numfilter]。其中，卷积核的通道数等于输入图片的通道数，卷积核的个数等于输出图片的通道数
-- 例子一：如下图，输入数据维度为[7,7,1]，卷积核维度为[3,3,1]，1个卷积核, stride = 1, padding = 0, 则输出图片的高和宽为h' = (7+2*0-3)/1 + 1 =5, w' = 7+2*0-3)/1 + 1 =5
+- 输入数据（图片）的维度是 [h,w,c]，卷积核维度为 [n,n,c]，num_filter代表卷积核个数，strie = s, padding = p，那么输出数据的维度为[$\frac{h + 2p - f}{s} + 1 $, $\frac{h + 2p - f}{s} + 1 $, num_filter]
+	- 卷积核的通道数等于输入图片的通道数
+	- 卷积核的个数等于输出图片的通道数
+- 例子一：如下图，输入数据维度为[7,7,1]，卷积核维度为[3,3,1]，1个卷积核, stride = 1, padding = 0, 则输出图片的高和宽为
+$$ h' = \frac{7+2*0-3}{1} + 1 = 5$$
+$$ w' = \frac{7+2*0-3}{1} + 1 = 5$$
 
 ![](http://ww1.sinaimg.cn/large/e323d644ly1g0bx7f19zuj20de06b0sl.jpg)
 
-- 例子二：上例中，仅仅把stride由1修改为2。则输出图片的高和宽为h' = (7+2*0-3)/2 + 1 =3, w' = 7+2*0-3)/2 + 1 =3
+- 例子二：上例中，仅仅把stride由1修改为2。则输出图片的高和宽为
+$$ h' = \frac{7+2*0-3}{2} + 1 = 3$$
+$$ w' = \frac{7+2*0-3}{2} + 1 = 3$$
 
 ![](http://ww1.sinaimg.cn/large/e323d644ly1g0bx807mogj20cw06j3yd.jpg)
 
@@ -66,10 +72,12 @@ print(output)
 ## 三维卷积
 - **谈到三维卷积，需要明确一点：多通道的二维卷积核[h,w,c]并不是三维卷积**。n维卷积指的是卷积运算用的是n维的卷积核，而在讨论核的维度时，是不把channel维加进去的。因为卷积核的维度指的是进行滑动窗口的维度，而滑窗操作是不在channel维度上进行的。每个channel共享一个滑窗位置，且不同channel上的卷积核权重是独立的。**三维卷积核是[d,h,w,c]。**
 - 三维卷积的输出计算方法同二维卷积，只是多了一个维度
-- 三维卷积通常用于：（1）医学影像数据，如CT影像; （2）视频处理领域，检测动作及人物行为
+- 三维卷积通常用于
+	- 医学影像数据，如CT影像
+	- 视频处理领域，检测动作及人物行为
 
 # 一维卷积在时间序列数据分析中的应用
-一维卷积的最重要的应用之一是TCN(Temporal Convolutional Network)，它是一种新的可以用来解决时间序列预测的算法。关于TCN的细节，可以参考18年的这篇论文（An Empirical Evaluation of Generic Convolutional and Recurrent Networks），它通常被认为是TCN的开端。
+一维卷积的最重要的应用之一是TCN(Temporal Convolutional Network)，它是一种新的可以用来解决时间序列预测的算法。关于TCN的细节，可以参考18年的这篇[论文](https://arxiv.org/pdf/1803.01271.pdf)，它通常被认为是TCN的开端。
 
 如果你有一个时间序列数据要处理，比如机械领域的故障诊断或状态预测等。如何应用一维卷积来预测呢？下面给出keras的代码。
 
