--- a/notebook/Untitled.ipynb
+++ b/notebook/Untitled.ipynb
@@ -46,7 +46,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -81,6 +83,33 @@
    "source": [
     "model.summary()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[238 161 244 206]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "input = np.array([1, 20, 15, 3, 18, 12, 4, 17])\n",
+    "kernel = np.array([1, 3, 10, 3, 1])\n",
+    "output = np.array([0, 0, 0, 0])\n",
+    "\n",
+    "# Output array\n",
+    "for ii in range(len(output)):\n",
+    "    output[ii] = (kernel * input[ii:ii+5]).sum()\n",
+    "\n",
+    "# Print output array\n",
+    "print(output)"
+   ]
   }
  ],
  "metadata": {
@@ -99,7 +128,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.4"
   },
   "toc": {
    "base_numbering": 1,
